ipc/dbus/DBusUtils.cpp
@@ -260,5 +260,21 @@ DBusMessage * dbus_func_args_error(DBusConnection *conn,
   return ret;
 }
 
+int dbus_returns_int32(DBusMessage *reply) 
+{
+  DBusError err;
+  int ret = -1;
+
+  dbus_error_init(&err);
+  if (!dbus_message_get_args(reply, &err,
+                             DBUS_TYPE_INT32, &ret,
+                             DBUS_TYPE_INVALID)) {
+    LOG_AND_FREE_DBUS_ERROR_WITH_MSG(&err, reply);
+  }
+
+  dbus_message_unref(reply);
+  return ret;
+}
+
 }
 }
